[package]
name = "hello_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.7.1"
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = { version = "0.1.7", features = ["full"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
validator = { version = "0.18.1", features = ["derive"] }
